[package]
name = "wirefilter-ast-builder"
version = "0.1.0"
description = "AST builder for the Wirefilter language"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]
# Avoid duplicate compilation error messages as we don't have doctests anyway
doctest = false

[dependencies]
wirefilter-engine = { path = "../engine" }

cidr = "0.2.2"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = { version = "1.0.117" }
