[package]
name = "wirefilter-ast-builder"
version = "0.1.0"
description = "AST builder for the Wirefilter language"
publish = false
edition = "2021"

[lib]
# Avoid duplicate compilation error messages as we don't have doctests anyway
doctest = false

[dependencies]
wirefilter-engine = { path = "../engine" }

cidr = "0.2.3"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
lazy_static = "1.5.0"
serde_json = { version = "1.0.128" }
