[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "wirefilter-engine"
version = "0.7.0"
description = "An execution engine for Wireshark-like filters"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/wirefilter"
keywords = ["wireshark", "filter", "engine", "parser", "runtime"]
categories = ["config", "parser-implementations"]
edition = "2018"

[lib]
name = "wirefilter"
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
cidr = { version = "0.2.2", features = ["serde"] }
failure = "0.1.8"
fnv = "1.0.7"
indexmap = { version = "2.2.6", features = ["serde"] }
regex = { version = "1.10.5", optional = true }
memmem = "0.1.1"
serde = { version = "1.0.203", features = ["derive"] }
cfg-if = "0.1.10"

[dev-dependencies]
indoc = "0.3.6"
criterion = "0.2.11"
serde_json = "1.0.117"
lazy_static = "1.4.0"

[features]
default = ["regex"]
