[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
name = "wirefilter-engine"
version = "0.7.0"
description = "An execution engine for Wireshark-like filters"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/wirefilter"
keywords = ["wireshark", "filter", "engine", "parser", "runtime"]
categories = ["config", "parser-implementations"]
edition = "2021"

[lib]
name = "wirefilter"
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
aho-corasick = "1.1.3"
cfg-if = "1.0.0"
cidr = { version = "0.2.3", features = ["serde"] }
derivative = "2.2.0"
fnv = "1.0.7"
indexmap = { version = "2.2.6", features = ["serde"] }
lazy_static = "1.5.0"
memmem = "0.1.1"
ordered-float = { version = "4.2.1", features = ["serde"] }
rand = "0.8.5"
regex = { version = "1.10.5" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sliceslice = "0.4.3"
thiserror = "1.0.61"

[dev-dependencies]
criterion = "0.3.6"
indoc = "2.0.5"
lazy_static = "1.5.0"
