[package]
authors = [ "Ingvar Stepanyan <me@rreverser.com>" ]
name = "wirefilter-ffi"
version = "0.7.0"
description = "FFI bindings for the Wirefilter engine"
publish = false
edition = "2018"

[package.metadata.deb]
assets = [ [ "target/release/libwirefilter_ffi.so", "usr/local/lib/libwirefilter.so", "644" ] ]

[lib]
crate-type = [ "cdylib", "rlib" ]
# Avoid duplicate compilation error messages as we don't have doctests anyway
doctest = false
bench = false

[dependencies]
backtrace = "0.3.71"
fnv = "1.0.7"
libc = "0.2.153"
num_enum = "0.5.11"
serde_json = "1.0.116"

[dependencies.wirefilter-engine]
path = "../engine"

[dev-dependencies]
indoc = "2.0.5"
regex = "1.10.4"
wirefilter-ffi-ctests = { path = "tests/ctests" }
