[package]
name = "wirefilter-parser"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2018"

[dependencies]
cidr = "0.2.2"
pest_consume = "1.1.3"
pest = "2.7.10"
regex = { version = "1.10.5", default-features = false, features = ["std", "perf"] }
ordered-float = { version = "4.2.0", features = ["serde"] }

[dev-dependencies]
indoc = "2.0.5"
